tinc-build/src/codegen/cel/functions/snapshots/tinc_build__codegen__cel__functions__map__tests__map_const_requires_runtime.snap
---
source: tinc-build/src/codegen/cel/functions/map.rs
expression: "postcompile::compile_str!(postcompile::config!\n{\n    test: true, dependencies:\n    vec![postcompile::Dependency::path(\"tinc\", \"../tinc\"),],\n}, quote!\n{\n    fn filter() -> Result<::tinc::__private::cel::CelValue<'static>,\n    ::tinc::__private::cel::CelError<'static>> { Ok(#output) } #[test] fn\n    test_filter()\n    {\n        assert_eq!(filter().unwrap(),\n        ::tinc::__private::cel::CelValue::List([::tinc::__private::cel::CelValueConv::conv(2),\n        ::tinc::__private::cel::CelValueConv::conv(0),\n        ::tinc::__private::cel::CelValueConv::conv(0),].into_iter().collect()));\n    }\n},)"
---
exit status: 0
--- test_stdout
running 1 test
.
test result: ok. 1 passed; 0 failed; 0 ignored; 0 measured; 0 filtered out; finished in [ELAPSED]s
--- expanded
#![feature(prelude_import)]
extern crate std;
#[prelude_import]
use std::prelude::rust_2024::*;
fn filter() -> Result<
    ::tinc::__private::cel::CelValue<'static>,
    ::tinc::__private::cel::CelError<'static>,
> {
    Ok({
        let mut collected = Vec::new();
        let mut iter = ([
            ::tinc::__private::cel::CelValue::Number(
                ::tinc::__private::cel::NumberTy::I64(2i64),
            ),
            ::tinc::__private::cel::CelValue::Number(
                ::tinc::__private::cel::NumberTy::I64(0i64),
            ),
            ::tinc::__private::cel::CelValue::Number(
                ::tinc::__private::cel::NumberTy::I64(0i64),
            ),
        ])
            .into_iter();
        loop {
            let Some(item) = iter.next() else {
                break ::tinc::__private::cel::CelValue::List(collected.into());
            };
            collected.push(item);
        }
    })
}
